multiple fixes and documentation enhancements after May the 4th workshop